infra/k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easypay-api
  namespace: easypay
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: easypay-api
          image: noufionline/easypay-api:2.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
            requests:
              cpu: "200m"
