infra/k8s/api/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easypay-api-service
  namespace: easypay
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 8080
