infra/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easypay-api-service
  namespace: easypay
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 8080 
      nodePort: 30001
